# site-discovery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  requirements.txt  server-info.example.yml  setup.cfg  setup.py  site-info.example.yml
scripts/: init.sh  site-discovery-pip-update.sh  upload.sh
site_discovery/: get_sites.py  server_info.py  site_info.py
