[metadata]
name = site-discovery
description = Site discovery tools for virtual hostings
license = MIT
description-file = README.md
url = https://github.com/viasite/site-discovery
download_url = https://github.com/viasite/site-discovery/archive/master.zip
requires-python = 2.7
author = Viasite
author_email = popstas@gmail.com

classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.7
    Topic :: System :: Monitoring

[pbr]
skip_authors = True
skip_changelog = True
warnerrors = True

[bdist_wheel]
universal=0

[files]
packages = 
    site_discovery

[entry_points]
console_scripts =
    get-sites = site_discovery.get_sites:main
    site-info = site_discovery.site_info:main
    server-info = site_discovery.server_info:main
